# rustlab

./: Cargo.toml
algorithm/src/: lib.rs
algorithm/src/search/: binary.rs  kth_smallest.rs  kth_smallest_index.rs  linear.rs  mod.rs
algorithm/src/sorting/: bubble.rs  insert.rs  insertion.rs  merge.rs  mod.rs  quick.rs  selection.rs
algorithm/src/strings/: burrows_wheeler.rs  mod.rs  reverse.rs
bitcask/: Cargo.toml  README.md
bitcask/examples/: basic_operations.rs
bitcask/src/: db.rs  db_test.rs  errors.rs  lib.rs  options.rs
bitcask/src/data/: data_file.rs  log_record.rs
bitcask/src/fio/: file_io.rs  mod.rs
bitcask/src/index/: btree.rs  mod.rs
bitcask/src/util/: rand_kv.rs
cpeek/: Cargo.toml  README.md
cpeek/examples/: tracing.rs
cpeek/src/: lib.rs  num_traits.rs
tutorial/: Cargo.toml
tutorial/src/: closure.rs  collection.rs  compositetype.rs  concurrent.rs  control.rs  errhandle.rs  function.rs  generics.rs  iterator.rs  lifetime.rs  main.rs  mtrait.rs  reference.rs  slice.rs  smartpointer.rs  variable.rs
tutorial/src/basic/: composite.rs  control.rs  errhandle.rs  mod.rs  variable.rs
