[package]
name = "tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
stdext = "0.3.3"
thiserror = "2.0.18"
anyhow = "1.0.102"
colored = "3.1.1"
jsonxf = "1.1.1"
mime = "0.3.17"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
